5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1793_1617.log
== TEST (2019-05-30 18:13:02) 
-- CODE:
from numpy import*
vet1=array(eval(input("digite o tipo de espada:")))
vet2=array(eval(input("digite o nivel:")))
vet1=vet1.upper()
dono_do_combatente=vet1*vet2
print(dono_do_combatente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:15:37) 
-- CODE:
from numpy import*
vet1=array(eval(input("digite o tipo de espada:")))
vet2=array(eval(input("digite o nivel:")))
vet1.upper()
dono_do_combatente=vet1*vet2
print(dono_do_combatente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:24) 
-- CODE:
from numpy import*
vet1=array(eval(input("digite o tipo de espada:")))
vet2=array(eval(input("digite o nivel:")))
dono_do_combatente=vet1*vet2
print(dono_do_combatente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:17:26) 
-- CODE:
from numpy import*
vet1=array(eval(input("digite o tipo de espada:")))
vet2=array(eval(input("digite o nivel:")))
dono_do_combatente=vet1*vet2
print(dono_do_combatente)
-- EXECUTION TIME:
0.403312
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    dono_do_combatente=vet1*vet2
TypeError: ufunc 'multiply' did not contain a loop with signature matching types dtype('<U21') dtype('<U21') dtype('<U21')

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:52) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
total=string*nivel
total=sum(nivel,dtype=int)
print(total.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:35:43) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
string=string.upper()
total=
total=sum(nivel,dtype=int)
print(total)

-- ERROR:
File "XXXX", line 5
    total=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:36:27) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
string=string.upper()
nivel,dtype=int
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:37:47) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
string="string.upper()"
nivel,dtype=int
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:37:51) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
string="string.upper()"
nivel,dtype=int
print(nivel)

-- EXECUTION TIME:
0.432544
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 5, in <module>
    nivel,dtype=int
TypeError: 'type' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:46:22) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
string=string.upper()
nivel,dtype=int
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:46:43) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
nivel,dtype=int
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:54) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
string=string.upper()
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:55:00) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
string=string.upper()
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- EXECUTION TIME:
0.384468
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    string=string.upper()
AttributeError: 'numpy.ndarray' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:58:43) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
string=string.upper()
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:11:31) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
while(i<size(string.upper)):
	i=i+1
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:11) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
while(i<size(string.upper())):
	i=i+1
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:12:17) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
while(i<size(string.upper())):
	i=i+1
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- EXECUTION TIME:
0.452227
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 5, in <module>
    while(i<size(string.upper())):
AttributeError: 'numpy.ndarray' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:12:17) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
while(i<size(string.upper())):
	i=i+1
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:15:05) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
while(i<size(string)):
	if(string[i] and nivel[i]):
		i=i+1
	nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:15:09) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
while(i<size(string)):
	if(string[i] and nivel[i]):
		i=i+1
	nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- EXECUTION TIME:
0.498431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 8, in <module>
    nivel,dtype=int
TypeError: 'type' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:15:09) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
while(i<size(string)):
	if(string[i] and nivel[i]):
		i=i+1
	nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:01) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
b=0
while(i<size(string)):
	if(string)>=0:
		b=b+1
	else:
		b=b+0
   i=i+1
print(string.upper())
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
File "XXXX", line 11
    i=i+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:13) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
b=0
while(i<size(string)):
	if(string)>=0:
		b=b+1
	else:
		b=b+0
      i=i+1
print(string.upper())
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
File "XXXX", line 11
    i=i+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:14) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
b=0
while(i<size(string)):
	if(string)>=0:
		b=b+1
	else:
		b=b+0
      i=i+1
print(string.upper())
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
File "XXXX", line 11
    i=i+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:14) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
b=0
while(i<size(string)):
	if(string)>=0:
		b=b+1
	else:
		b=b+0
      i=i+1
print(string.upper())
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
File "XXXX", line 11
    i=i+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:21) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
b=0
while(i<size(string)):
	if(string)>=0:
		b=b+1
	else:
		b=b+0
      i=i+0
print(string.upper())
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
File "XXXX", line 11
    i=i+0
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:21) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
b=0
while(i<size(string)):
	if(string)>=0:
		b=b+1
	else:
		b=b+0
      i=i+0
print(string.upper())
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
File "XXXX", line 11
    i=i+0
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:22) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
b=0
while(i<size(string)):
	if(string)>=0:
		b=b+1
	else:
		b=b+0
      i=i+0
print(string.upper())
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
File "XXXX", line 11
    i=i+0
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:22) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
b=0
while(i<size(string)):
	if(string)>=0:
		b=b+1
	else:
		b=b+0
      i=i+0
print(string.upper())
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
File "XXXX", line 11
    i=i+0
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:22) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
b=0
while(i<size(string)):
	if(string)>=0:
		b=b+1
	else:
		b=b+0
      i=i+0
print(string.upper())
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
File "XXXX", line 11
    i=i+0
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:22) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
b=0
while(i<size(string)):
	if(string)>=0:
		b=b+1
	else:
		b=b+0
      i=i+0
print(string.upper())
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
File "XXXX", line 11
    i=i+0
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:31) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
b=0
while(i<size(string)):
	if(string)>=0:
		b=b+1
	else:
		b=b+0
print(string.upper())
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:25:55) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size[string].upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+4
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
nivel,dtype=int
dono_do_combatente=string*nivel
print(nivel)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:26:14) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size[string].upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+4
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
nivel,dtype=int
dono_do_combatente=string*nivel
print(dono_do_combatente)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:27:15) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+4
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
nivel,dtype=int
dono_do_combatente=string*nivel
print(dono_do_combatente)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:27:22) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+4
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
nivel,dtype=int
dono_do_combatente=string*nivel
print(dono_do_combatente)

-- EXECUTION TIME:
0.486477
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 10, in <module>
    while(i<size(string).upper()):
AttributeError: 'int' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:27:24) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")))
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+4
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
nivel,dtype=int
dono_do_combatente=string*nivel
print(dono_do_combatente)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:35:58) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+4
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
	i=i+1
dano=string*nivel
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:36:02) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+4
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
	i=i+1
dano=string*nivel
print(dano)

-- EXECUTION TIME:
0.548637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:36:03) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+4
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
	i=i+1
dano=string*nivel
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:38:50) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+3
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
	i=i+1
dano=string*nivel
print(dano)

-- EXECUTION TIME:
0.439926
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:20) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+3
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
dano=string*nivel
print(dano)

-- EXECUTION TIME:
0.61952
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:23) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+3
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
dano=string*nivel
print(dano)

-- EXECUTION TIME:
0.975137
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:24) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+3
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
dano=string*nivel
print(dano)

-- EXECUTION TIME:
0.722858
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:24) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+3
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
dano=string*nivel
print(dano)

-- EXECUTION TIME:
1.70835
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:24) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
c=0
f=0
d1=0
e=0
d2=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		c=c+2
	if(string=="FERRO"):
		f=f+3
	if(string=="DWARVEN"):
		d1=d1+8
	if(string=="ELVEN"):
		e=e+11
	if(string=="DAEDRIC"):
		d2=d2+14
dano=string*nivel
print(dano)

-- EXECUTION TIME:
1.96607
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:43:51) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*nivel
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:43:53) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*nivel
print(dano)

-- EXECUTION TIME:
0.340302
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:02) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:03) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.32166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:08) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.423557
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:08) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.78508
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:08) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(v)
i=0
soma=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
1.2934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 4, in <module>
    v1=size(v)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:25) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:27) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.286345
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size(string).upper()):
AttributeError: 'int' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:28) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.412423
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size(string).upper()):
AttributeError: 'int' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:44:44) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
nivel1=size(nivel)
i=0
soma=0
while(i<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.61421
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size(string).upper()):
AttributeError: 'int' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:45:05) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
nivel1=size(nivel)
i=0
soma=0
while(size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.466178
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(size(string).upper()):
AttributeError: 'int' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:45:19) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
nivel1=size(nivel)
i=0
soma=0
while(nivel1<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.360718
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(nivel1<size(string).upper()):
AttributeError: 'int' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:45:34) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(v1<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.344548
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(v1<size(string).upper()):
AttributeError: 'int' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:45:35) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(v1<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:46:01) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(v1<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
i=i+1
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.348153
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(v1<size(string).upper()):
AttributeError: 'int' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:46:05) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(v1<size(string).upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
i=i+1
dano=string*soma
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:47:49) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:47:51) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:47:52) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[i].upper()):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.382416
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[i].upper()):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:49:06) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:09) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.345119
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:11) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.649793
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:12) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
1.80778
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:12) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
1.85998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:49:59) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
0.625937
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:50:02) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
1.15972
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:50:02) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
2.29939
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:50:03) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
5.34038
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:50:03) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
6.58989
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:50:03) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
3.63173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:50:03) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
5.95768
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:50:03) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
4.64487
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:50:03) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
4.27995
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:50:03) 
-- CODE:
from numpy import*
string=array(eval(input("digite a string:")))
nivel=array(eval(input("digite o nivel:")),dtype=int)
v1=size(nivel)
i=0
soma=0
while(i<size[string]):
	if(string=="CENOURA"):
		soma=soma+(2*nivel[i])
	if(string=="FERRO"):
		soma=soma+(4*nivel[i])
	if(string=="DWARVEN"):
		soma=soma+(8*nivel[i])
	if(string=="ELVEN"):
		soma=soma+(11*nivel[i])
	if(string=="DAEDRIC"):
		soma=soma+(14*nivel[i])
dano=string*soma
print(dano)

-- EXECUTION TIME:
3.39792
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1617/main.py", line 7, in <module>
    while(i<size[string]):
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
